fixed bug not showing limited projects/posts on homepage

--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@ html,
 body {
     background-color: #111116;
     color: var(--white);
-    font-family: "IBM Plex Mono";
+    font-family: "Roboto", sans-serif;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -39,6 +39,7 @@ main {
 }
 
 h1 {
+    font-family: "IBM Plex Mono";
     font-size: 2.75rem;
     letter-spacing: var(--tighter-spacing);
     font-weight: 700;
@@ -46,6 +47,7 @@ h1 {
     margin-bottom: 0.35em;
 }
 h2 {
+    font-family: "IBM Plex Mono";
     font-size: 2rem;
     letter-spacing: var(--tight-spacing);
     font-weight: 700;
@@ -54,6 +56,7 @@ h2 {
 }
 
 h3 {
+    font-family: "IBM Plex Mono";
     margin-top: 1.25em;
     margin-bottom: 0.75em;
 }
